--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@
           <div class="container-fluid m-5 ">
             <div class="container text-center">
               <div class="row row-cols-2">
-                <div class="col">
+                <div class="col container-fluid">
                   <div class="card" style="width: 18rem;">
                     <img src="../assets/img/yo.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -62,7 +62,7 @@
                   </div>
 
                 </div>
-                <div class="col">
+                <div class="col container-fluid">
                   <H1 class="m-4">Mi experiencia de trabajo</H1>
                   <img src="../assets/img/experiencia.png " alt="">
                 </div>
