edición de hipervinculos

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
       <section class="text-center mt-4">
         <h2>Consejos alimenticios para tratar:</h2>
         <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
-          <a href="./pages/planes_alimenticios.html#diabetes" class="btn btn-success">Diabetes</a>
-          <a href="./pages/planes_alimenticios.html#hipertensión" class="btn btn-success">Hipertensión</a>
-          <a href="./pages/planes_alimenticios.html#colesterol" class="btn btn-success">Colesterol</a>
+          <a href="./pages/planes_alimenticios.html#diabetes" class="btn btn-success" id="botondiabetes">Diabetes</a>
+          <a href="./pages/planes_alimenticios.html#hipertensión" class="btn btn-success" id="botonhipertensión">Hipertensión</a>
+          <a href="./pages/planes_alimenticios.html#colesterol" class="btn btn-success" id="botoncolesterol">Colesterol</a>
         </div>
       </section>
 
