--- a/pages/planes_alimenticios.html
+++ b/pages/planes_alimenticios.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Planes Alimenticios | Carolina Beatriz Fernández Barrios</title>
       <link rel="stylesheet" href="../css/bootstrap.min.css">
-      <link rel="stylesheet" href="..style.css">
+      <link rel="stylesheet" href="../css/style.css">
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
