--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Nutrición | Carolina Beatríz Fernández Barrios</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css"> <!-- Archivo CSS compilado de SCSS -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -62,9 +66,9 @@
         <h1 class="titulo_principal m-4">Consejos alimenticios para tratar</h1>
 
         <div class="botones_inicio d-flex flex-wrap justify-content-center gap-2 mt-3">
-            <a href="./pages/planes_alimenticios.html#diabetes" class="boton btn">Diabetes</a>
-            <a href="./pages/planes_alimenticios.html#hipertensión" class="boton btn">Hipertensión</a>
-            <a href="./pages/planes_alimenticios.html#colesterol" class="boton btn">Colesterol</a>
+            <a href="./pages/planes_alimenticios.html#diabetes" class="animate__animated animate__bounceOut animate_delay-2s animate__slower animate__infinite boton btn">Diabetes</a>
+            <a href="./pages/planes_alimenticios.html#hipertensión" class="animate__animated animate__bounceOut animate_delay-2s animate__slower animate__infinite boton btn">Hipertensión</a>
+            <a href="./pages/planes_alimenticios.html#colesterol" class="animate__animated animate__bounceOut animate_delay-2s animate__slower animate__infinite boton btn">Colesterol</a>
         </div>
 
         <section class="habitos_index m-4">
@@ -96,15 +100,15 @@
               <div class="col-md-4 text-center">
                 <h3 class="titles">No se trata de comer menos, sino de comer mejor</h3>
                 <p class="p_index">Acá podrás encontrar algunos consejos</p>
-                <a href="./pages/consejos_nutricionales.html" class="boton btn btn-success">Consejos nutricionales</a>
+                <a href="./pages/consejos_nutricionales.html" class="animate__animated animate__bounceOut animate_delay-2s animate__slower animate__infinite boton btn btn-success">Consejos nutricionales</a>
               </div>
-              <div class="col-md-4 ">
-                <img src="./assets/img/artworks-DWjkNvkv1xgyqCkw-nzVS2Q-t500x500.jpg" class="img-fluid" alt="">
+              <div class="col-md-4">
+                <img src="./assets/img/artworks-DWjkNvkv1xgyqCkw-nzVS2Q-t500x500.jpg" class="animate__animated animate__backInUp animate__slower animate_delay-2s animate__infinite img-fluid" alt="">
               </div>
               <div class="col-md-4">
                 <h3 class="titles">¿Listo para empezar tu cambio?</h3>
                 <p class="p_index">Hablemos y diseñemos juntos un plan que funcione para vos.</p>
-                <a href="./pages/contacto.html" class="boton btn btn-success">Contactame.</a>
+                <a href="./pages/contacto.html" class="animate__animated animate__bounceOut animate_delay-2s animate__slower animate__infinite boton btn btn-success">Contactame.</a>
               </div>
             </div>
           </div>
