--- a/pages/consejos_nutricionales.html
+++ b/pages/consejos_nutricionales.html
@@ -7,6 +7,10 @@
         <title>Consejos Nutricionales | Carolina Beatriz Fernández Barrios</title>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/style.css">
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
@@ -49,12 +53,12 @@
         <main>
           <section class="consejos-section container-fluid">
             <h1 class="titulo_principal">Consejos para una alimentación saludable</h1>
-            <div class="videos-contenedor">
+            <div class="videos-contenedor animate__animated animate__backInUp animate__slower animate_delay-2s">
               <div class="video-wrapper">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/z9ov3C7XM3o?si=8ShI6SdJC8HanVE3" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="imagen-wrapper">
-                <img src="../assets/img/consejos-confinamiento.png" alt="Consejos nutricionales" class="img-fluid">
+                <img src="../assets/img/consejos-confinamiento.png" alt="Consejos nutricionales" class="animate__animated animate__backInUp animate__slower animate_delay-2s  img-fluid">
               </div>
             </div>
           </section>
@@ -93,12 +97,12 @@
             </div>
           </section>
         
-          <section class="imagenes-finales container">
+          <section class="imagenes-finales container animate__animated animate__backInUp animate__slower animate_delay-2s">
             <div class="imagenes-grid">
               <img src="../assets/img/consnutri02.jpg" alt="Consejo nutricional 2">
               <img src="../assets/img/consejosnutri01.webp" alt="Consejo nutricional 1">
             </div>
-            <div class="imagen-centrada">
+            <div class="imagen-centrada animate__animated animate__backInUp animate__slower animate_delay-2s">
               <img src="../assets/img/PlatoHarvard-EXPONENTIAL-1024x663.jpg" alt="Plato Harvard" class="img-fluid">
             </div>
           </section>
