keywords listos, finalizado

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nutrición, Salud, Alimentación, Consejos nutricionales">
+    <meta name="description" content="Página de inicio de nutrición para la nutricionista Fernández Barrios">
+    <meta name="keywords" content="Nutrición, Salud, Bienestar, Saludable, Contacto">
     <title>Nutrición | Carolina Beatríz Fernández Barrios</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css"> <!-- Archivo CSS compilado de SCSS -->
@@ -103,7 +104,7 @@
                 <a href="./pages/consejos_nutricionales.html" class="animate__animated animate__bounceOut animate_delay-2s animate__slower animate__infinite boton btn btn-success">Consejos nutricionales</a>
               </div>
               <div class="col-md-4">
-                <img src="./assets/img/artworks-DWjkNvkv1xgyqCkw-nzVS2Q-t500x500.jpg" class="animate__animated animate__backInUp animate__slower animate_delay-2s animate__infinite img-fluid" alt="">
+                <img src="./assets/img/artworks-DWjkNvkv1xgyqCkw-nzVS2Q-t500x500.jpg" class="animate__animated animate__backInUp animate__slower animate_delay-2s img-fluid" alt="">
               </div>
               <div class="col-md-4">
                 <h3 class="titles">¿Listo para empezar tu cambio?</h3>
