--- a/pages/consejos_nutricionales.html
+++ b/pages/consejos_nutricionales.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Consejos Nutricionales">
+        <meta name="keywords" content="Consejos saludables, Nutrición, Salud, Bienestar, Saludable, Contacto">
         <link rel="stylesheet" href="../css/styles.css">
         <title>Consejos Nutricionales | Carolina Beatriz Fernández Barrios</title>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
