--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Formulario para contactar con nutricionista">
+        <meta name="keywords" content="Formulario de contacto">
         <link rel="stylesheet" href="../css/styles.css">
         <title>Contacto | Carolina Beatríz Fernández Barrios</title>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
