--- a/pages/planes_alimenticios.html
+++ b/pages/planes_alimenticios.html
@@ -3,6 +3,8 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Planes Alimenticios para distintos tipos de enfermedades">
+      <meta name="keywords" content="Tipo de alimentación para la diabetes, el colesterol y la hipertensión">
       <title>Planes Alimenticios | Carolina Beatriz Fernández Barrios</title>
       <link rel="stylesheet" href="../css/bootstrap.min.css">
       <link rel="stylesheet" href="../css/style.css">
