--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="profesional nutricionista recibida de la UBA, te orienta en tu búsqueda alimenticia hacia el bienestar">
+        <meta name="keywords" content="Universidad de buenos aires, Profesional, Nutricionista, Zona sur">
         <link rel="stylesheet" href="../css/styles.css">
+
         <title>Acerca de mí | Carolina Beatríz Fernández Barrios</title>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/style.css">    
