agregando m-4 en footers

--- a/pages/planes_alimenticios.html
+++ b/pages/planes_alimenticios.html
@@ -267,7 +267,7 @@
           </a>
     </section>
 
-      <footer class="bg-light text-dark pt-4 ">
+      <footer class="bg-light text-dark pt-4 m-4">
           <div class="container mb-4">
               <div class="row text-center text-md-start">
                   <!-- Sección 1 -->
