--- a/pages/about.html
+++ b/pages/about.html
@@ -79,7 +79,7 @@
           </div>
         </main>
 
-        <footer class="bg-light text-dark pt-4">
+        <footer class="bg-light text-dark pt-4 m-4">
           <div class="container">
               <div class="row text-center text-md-start">
                   <!-- Sección 1 -->
