--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,7 +103,7 @@
         
         </main>
 
-        <footer class="bg-light text-dark pt-4">
+        <footer class="bg-light text-dark pt-4 m-4">
             <div class="container">
                 <div class="row text-center text-md-start">
                     <!-- Sección 1 -->
